Move score to powerup estimate box

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,4 +128,6 @@
     <string name="iv">IV</string>
     <string name="percent">%d%%</string>
     <string name="unknown_percent">"?%"</string>
+    <string name="dynamic_combat_power">Dynamic Combat Power</string>
+    <string name="compared_to_perfect_iv">% Compared To Perfect IV</string>
 </resources>
